Changelog
=========

9.5.dev0 - (unreleased)
-----------------------
* Bugfix: Pillow 2.9.0 implemented eps patch, then it is not be needed and removed. Pin Pillow into version.cfg buildout
  [lucas, refs #21636]
* Change: cleaned dataservice_styles.css of uneeded styles
  [ichimdav refs #27220]

9.4 - (2015-08-18)
------------------
* Change: Title is now used as the label of DataFiles found within Data
  instead of the field name
  [ichimdav refs #27927]
* Feature: Add link to DaViz Visualisation on Organisation view
  [lucas, refs #27622]

9.3 - (2015-07-30)
------------------
* Bugfix: Fix download permssion on EEAFigureFile
  [lucas, refs #27617]

9.2 - (2015-07-28)
------------------
* Bugfix: pylint compile
  [lucas refs #27245]

9.1 - (2015-07-06)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [ichimdav #22596]
* Change: removed sendWorkflowEmail method calling as well as the
  frontpage_workflow_scripts module because the functionality can be
  triggered with content rules
  [ichimdav refs #22596]

9.0 - (2015-04-28)
------------------
* Bugfix: Fixed mimetype in rdf export for files, including files inside zip
  [szabozo0 refs #20674]

8.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

8.8 - (2015-02-16)
------------------
* Feature: added an Auto relation from Assessment and AssessmentPart to a
  Data portal_type if there is a DavizVisualization or EEAFigure in the middle
  [ichimdav refs #21173]

8.7 - (2015-01-22)
------------------
* Bug fix: Fixed dataset_view within Chameleon
  [voineali refs #22307]
* Change: removed map view location calls from eea.dataservice now that acgis
  map is no longer available within eea.geotags
  [ichimdav]
